--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
       	</div>
       </div><div class="row">
   <div class="col-md-4 col-md-offset-4">
-    <form action="https://www.paypal.com/cgi-bin/webscr" method="post">
+    <form action="https://www.paypal.com/donate" method="post">
       <input type="hidden" name="cmd" value="_xclick">
       <input type="hidden" name="business" value="donate@alliancercclub.com">
-      <input type="hidden" name="image_url" value="https://donate.alliancercclub.com/assets/img/2E-Swag-Logo-Paypal.png">
+      <input type="hidden" name="image_url" value="https://donate.alliancercclub.com/assets/img/logo-paypal.png">
       <input type="hidden" name="return" value="https://donate.alliancercclub.com/thankyou.html">
       <input type="hidden" name="item_name" value="Donation">
       <input type="hidden" name="currency_code" value="USD">
