--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
       <input type="hidden" name="business" value="donate@alliancercclub.com">
       <input type="hidden" name="image_url" value="https://donate.alliancercclub.com/assets/img/logo-paypal.png">
       <input type="hidden" name="return" value="https://donate.alliancercclub.com/thankyou.html">
-      <input type="hidden" name="item_name" value="Donation">
+	  <input type="hidden" name="no_recurring" value="0">
+      <input type="hidden" name="item_name" value="Donation to Alliance RC Club">
+	  <input type="hidden" name="item_number" value="General Donation">
       <input type="hidden" name="currency_code" value="USD">
       <div class="input-group">
         <span class="input-group-addon">$</span>
