--- a/index.html
+++ b/index.html
@@ -20,18 +20,7 @@
       </div><div class="row">
   <div class="col-md-4 col-md-offset-4">
     <form action="https://www.paypal.com/donate" method="post">
-      <input type="hidden" name="cmd" value="_xclick">
-      <input type="hidden" name="business" value="donate@alliancercclub.com">
-      <input type="hidden" name="image_url" value="https://donate.alliancercclub.com/assets/img/logo-paypal.png">
-      <input type="hidden" name="return" value="https://donate.alliancercclub.com/thankyou.html">
-	  <input type="hidden" name="no_recurring" value="0">
-      <input type="hidden" name="item_name" value="Donation to Alliance RC Club">
-	  <input type="hidden" name="item_number" value="General Donation">
-      <input type="hidden" name="currency_code" value="USD">
-      <div class="input-group">
-        <span class="input-group-addon">$</span>
-        <input name="amount" type="number" min="0.01" step="0.01" class="form-control input-large">
-      </div>
+	  <input type="hidden" name="hosted_button_id" value="RVF9ETLJ37JXL" />
     </div>
   </div>
   <div class="row">
